# Makefile.am
#
# $Id$

EXTRA_DIST = vaucanson/config/pconf-hh.in

nobase_include_HEADERS =					     \
	vaucanson/vaucanson.hh \
	vaucanson/vaucanson_boolean_automaton.hh			   \
	vaucanson/vaucanson_boolean_automaton.hxx			   \
	vaucanson/vaucanson_z_automaton.hh			   \
	vaucanson/vaucanson_z_automaton.hxx			   \
	vaucanson/vaucanson_r_automaton.hh			   \
	vaucanson/vaucanson_r_automaton.hxx			   \
	vaucanson/vaucanson_z_max_plus_automaton.hh			   \
	vaucanson/vaucanson_z_max_plus_automaton.hxx			   \
	vaucanson/standard_algorithms.hh \
	vaucanson/algebra/concept/alphabets_base.hh		       \
	vaucanson/algebra/concept/alphabets_base.hxx		       \
	vaucanson/algebra/concept/freemonoid_base.hh		       \
	vaucanson/algebra/concept/freemonoid_base.hxx		       \
	vaucanson/algebra/concept/letter.hh			       \
	vaucanson/algebra/concept/monoid_base.hh		       \
	vaucanson/algebra/concept/monoid_base.hxx		       \
	vaucanson/algebra/concept/numerical_semiring.hh		       \
	vaucanson/algebra/concept/semigroup_base.hh		       \
	vaucanson/algebra/concept/semigroup_base.hxx		       \
	vaucanson/algebra/concept/semiring_base.hh		       \
	vaucanson/algebra/concept/semiring_base.hxx		       \
	vaucanson/algebra/concept/series_base.hh		       \
	vaucanson/algebra/concept/series_base.hxx		       \
	vaucanson/algebra/concept/tropical_semiring.hh		       \
	vaucanson/algebra/concrete/alphabets/alphabets.hh	       \
	vaucanson/algebra/concrete/alphabets/decorated_alphabet.hh     \
	vaucanson/algebra/concrete/alphabets/decorated_alphabet.hxx    \
	vaucanson/algebra/concrete/alphabets/predefs.hh		       \
	vaucanson/algebra/concrete/alphabets/set_alphabet.hh	       \
	vaucanson/algebra/concrete/alphabets/set_alphabet.hxx	       \
	vaucanson/algebra/concrete/free_monoid/predefs.hh	       \
	vaucanson/algebra/concrete/free_monoid/str_words.hh	     \
	vaucanson/algebra/concrete/free_monoid/str_words.hxx	     \
	vaucanson/algebra/concrete/free_monoid/words.hh		     \
	vaucanson/algebra/concrete/free_monoid/words.hxx	     \
	vaucanson/algebra/concrete/letter/char_letter.hh	     \
	vaucanson/algebra/concrete/letter/couple_letter.hh	     \
	vaucanson/algebra/concrete/letter/couple_letter.hxx	     \
	vaucanson/algebra/concrete/letter/range.hh		     \
	vaucanson/algebra/concrete/letter/range.hxx		     \
	vaucanson/algebra/concrete/predefs.hh			     \
	vaucanson/algebra/concrete/semiring/numerical_semiring.hh    \
	vaucanson/algebra/concrete/semiring/numerical_semiring.hxx   \
	vaucanson/algebra/concrete/semiring/tropical_semiring.hh     \
	vaucanson/algebra/concrete/semiring/tropical_semiring.hxx    \
	vaucanson/algebra/concrete/semiring/rational_number.hh		     \
	vaucanson/algebra/concrete/semiring/rational_number.hxx	     \
	vaucanson/algebra/concrete/series/generalized.hh	     \
	vaucanson/algebra/concrete/series/generalized.hxx	     \
	vaucanson/algebra/concrete/series/krat_coefficient.hh	     \
	vaucanson/algebra/concrete/series/krat_coefficient.hxx	     \
	vaucanson/algebra/concrete/series/krat_conversion.hh	     \
	vaucanson/algebra/concrete/series/krat_conversion.hxx	     \
	vaucanson/algebra/concrete/series/krat_exp_is_finite_app.hxx \
	vaucanson/algebra/concrete/series/krat_exp_parser.hh	     \
	vaucanson/algebra/concrete/series/krat_exp_parser.hxx	     \
	vaucanson/algebra/concrete/series/krat_exp_pattern.hh	     \
	vaucanson/algebra/concrete/series/krat_exp_pattern.hxx	     \
	vaucanson/algebra/concrete/series/krat_exp_verbalization.hh  \
	vaucanson/algebra/concrete/series/krat_exp_verbalization.hxx \
	vaucanson/algebra/concrete/series/krat_exp_support.hxx	     \
	vaucanson/algebra/concrete/series/krat.hh		     \
	vaucanson/algebra/concrete/series/krat.hxx		     \
	vaucanson/algebra/concrete/series/polynoms.hh		     \
	vaucanson/algebra/concrete/series/polynoms.hxx		     \
	vaucanson/algebra/concrete/series/rat/depth_visitor.hh	     \
	vaucanson/algebra/concrete/series/rat/depth_visitor.hxx	     \
	vaucanson/algebra/concrete/series/rat/dump_visitor.hh	     \
	vaucanson/algebra/concrete/series/rat/dump_visitor.hxx	     \
	vaucanson/algebra/concrete/series/rat/exp.hh		     \
	vaucanson/algebra/concrete/series/rat/exp.hxx		     \
	vaucanson/algebra/concrete/series/rat/nodes.hh		     \
	vaucanson/algebra/concrete/series/rat/nodes.hxx		     \
	vaucanson/algebra/concrete/series/rat/random_visitor.hh	     \
	vaucanson/algebra/concrete/series/rat/random_visitor.hxx     \
	vaucanson/algebra/concrete/series/series.hh		     \
	vaucanson/algebra/concrete/series/series.hxx		     \
	vaucanson/algebra/concrete/series/transpose.hh		     \
	vaucanson/algebra/concrete/series/transpose.hxx		     \
	vaucanson/algorithms/accessible.hh			     \
	vaucanson/algorithms/accessible.hxx			     \
	vaucanson/algorithms/aci_canonical.hh			     \
	vaucanson/algorithms/aci_canonical.hxx			     \
	vaucanson/algorithms/internal/build_pattern.hh		     \
	vaucanson/algorithms/internal/build_pattern.hxx		     \
	vaucanson/algorithms/aut_to_exp.hh			     \
	vaucanson/algorithms/aut_to_exp.hxx			     \
	vaucanson/algorithms/backward_closure.hh		     \
	vaucanson/algorithms/backward_closure.hxx		     \
	vaucanson/algorithms/backward_realtime.hh		     \
	vaucanson/algorithms/backward_realtime.hxx		     \
	vaucanson/algorithms/berry_sethi.hh			     \
	vaucanson/algorithms/berry_sethi.hxx			     \
	vaucanson/algorithms/brzozowski.hh			     \
	vaucanson/algorithms/brzozowski.hxx			     \
	vaucanson/algorithms/complement.hh			     \
	vaucanson/algorithms/complement.hxx			     \
	vaucanson/algorithms/complete.hh			     \
	vaucanson/algorithms/complete.hxx			     \
	vaucanson/algorithms/concatenate.hh			     \
	vaucanson/algorithms/concatenate.hxx			     \
	vaucanson/algorithms/derivatives_automaton.hh		     \
	vaucanson/algorithms/derivatives_automaton.hxx		     \
	vaucanson/algorithms/determinize.hh			     \
	vaucanson/algorithms/determinize.hxx			     \
	vaucanson/algorithms/eval.hh				     \
	vaucanson/algorithms/eval.hxx				     \
	vaucanson/algorithms/evaluation.hh			     \
	vaucanson/algorithms/evaluation.hxx			     \
	vaucanson/algorithms/extension.hh			     \
	vaucanson/algorithms/extension.hxx			     \
	vaucanson/algorithms/finite_support_conversion.hh	     \
	vaucanson/algorithms/finite_support_conversion.hxx	     \
	vaucanson/algorithms/forward_closure.hh			     \
	vaucanson/algorithms/forward_closure.hxx		     \
	vaucanson/algorithms/forward_realtime.hh		     \
	vaucanson/algorithms/forward_realtime.hxx		     \
	vaucanson/algorithms/isomorph.hh			     \
	vaucanson/algorithms/isomorph.hxx			     \
	vaucanson/algorithms/is_letterized.hh			     \
	vaucanson/algorithms/is_letterized.hxx                       \
	vaucanson/algorithms/is_normalized.hh			     \
	vaucanson/algorithms/is_normalized.hxx                       \
	vaucanson/algorithms/is_realtime.hh			     \
	vaucanson/algorithms/is_realtime.hxx                         \
	vaucanson/algorithms/krat_exp_cderivation.hh		     \
	vaucanson/algorithms/krat_exp_cderivation.hxx		     \
	vaucanson/algorithms/krat_exp_constant_term.hh		     \
	vaucanson/algorithms/krat_exp_constant_term.hxx		     \
	vaucanson/algorithms/krat_exp_derivation.hh		     \
	vaucanson/algorithms/krat_exp_derivation.hxx		     \
	vaucanson/algorithms/krat_exp_flatten.hh		     \
	vaucanson/algorithms/krat_exp_flatten.hxx		     \
	vaucanson/algorithms/krat_exp_linearize.hh		     \
	vaucanson/algorithms/krat_exp_linearize.hxx		     \
	vaucanson/algorithms/krat_exp_partial_derivation.hh	     \
	vaucanson/algorithms/krat_exp_partial_derivation.hxx	     \
	vaucanson/algorithms/krat_exp_print.hh	     \
	vaucanson/algorithms/krat_exp_print.hxx	     \
	vaucanson/algorithms/krat_exp_realtime.hh		     \
	vaucanson/algorithms/krat_exp_realtime.hxx		     \
	vaucanson/algorithms/letter_to_letter_composition.hxx	     \
	vaucanson/algorithms/letter_to_letter_composition.hh	     \
	vaucanson/algorithms/minimization_hopcroft.hh		     \
	vaucanson/algorithms/minimization_hopcroft.hxx		     \
	vaucanson/algorithms/minimization_moore.hh		     \
	vaucanson/algorithms/minimization_moore.hxx		     \
	vaucanson/algorithms/normalized.hh			     \
	vaucanson/algorithms/normalized.hxx			     \
	vaucanson/algorithms/product.hh				     \
	vaucanson/algorithms/product.hxx			     \
	vaucanson/algorithms/projection.hh			     \
	vaucanson/algorithms/projection.hxx			     \
	vaucanson/algorithms/realtime.hh			     \
	vaucanson/algorithms/realtime.hxx			     \
	vaucanson/algorithms/realtime_composition.hh		     \
	vaucanson/algorithms/realtime_composition.hxx		     \
	vaucanson/algorithms/search.hh				     \
	vaucanson/algorithms/search.hxx				     \
	vaucanson/algorithms/standard.hh			     \
	vaucanson/algorithms/standard.hxx			     \
	vaucanson/algorithms/standard_of.hh			     \
	vaucanson/algorithms/standard_of.hxx			     \
	vaucanson/algorithms/sub_automaton.hh			     \
	vaucanson/algorithms/sub_automaton.hxx			     \
	vaucanson/algorithms/sum.hh				     \
	vaucanson/algorithms/sum.hxx				     \
	vaucanson/algorithms/thompson.hh			     \
	vaucanson/algorithms/thompson.hxx			     \
	vaucanson/algorithms/transpose.hh			     \
	vaucanson/algorithms/transpose.hxx			     \
	vaucanson/algorithms/trim.hh				     \
	vaucanson/algorithms/trim.hxx				     \
	vaucanson/algorithms/internal/build_pattern.hh			 \
	vaucanson/algorithms/internal/partial_rat_exp_constant_term.hh	 \
	vaucanson/algorithms/internal/partial_rat_exp_derivation.hh	 \
	vaucanson/algorithms/internal/partial_rat_exp.hh		 \
	vaucanson/algorithms/internal/build_pattern.hxx			 \
	vaucanson/algorithms/internal/partial_rat_exp_constant_term.hxx	 \
	vaucanson/algorithms/internal/partial_rat_exp_derivation.hxx	 \
	vaucanson/algorithms/internal/partial_rat_exp.hxx		 \
	vaucanson/automata/concept/automata_base.hh		     \
	vaucanson/automata/concept/automata_base.hxx		     \
	vaucanson/automata/concept/automata.hh			     \
	vaucanson/automata/concept/automata.hxx			     \
	vaucanson/automata/concept/automata_kind.hh		     \
	vaucanson/automata/concept/automata_ops.hh		     \
	vaucanson/automata/concept/automata_ops.hxx		     \
	vaucanson/automata/concept/copy.hh			     \
	vaucanson/automata/concept/copy.hxx			     \
	vaucanson/automata/concept/delta_kind.hh		     \
	vaucanson/automata/concept/handlers.hh			     \
	vaucanson/automata/concept/handlers.hxx			     \
	vaucanson/automata/concept/history.hh			     \
	vaucanson/automata/concept/history.hxx			     \
	vaucanson/automata/concept/kinds.hh			     \
	vaucanson/automata/concept/kinds.hxx			     \
	vaucanson/automata/concept/tags.hh			     \
	vaucanson/automata/concept/tags.hxx			     \
	vaucanson/automata/concept/transducer_base.hh		     \
	vaucanson/automata/concept/transducer_base.hxx		     \
	vaucanson/automata/concept/transducer.hh		     \
	vaucanson/automata/concept/transducer.hxx		     \
	vaucanson/automata/concept/transducer_ops.hh		     \
	vaucanson/automata/concept/transducer_ops.hxx		     \
	vaucanson/automata/concept/translate.hh			     \
	vaucanson/automata/concept/translate.hxx		     \
	vaucanson/automata/concrete/automaton_view.hh		     \
	vaucanson/automata/concrete/automaton_view.hxx		     \
	vaucanson/automata/concrete/generalized.hh		     \
	vaucanson/automata/concrete/generalized.hxx		     \
	vaucanson/automata/concrete/graph.hh			     \
	vaucanson/automata/concrete/graph.hxx			     \
	vaucanson/automata/concrete/kind_adapter.hh		     \
	vaucanson/automata/concrete/kind_adapter.hxx		     \
	vaucanson/automata/concrete/transpose_view.hh		     \
	vaucanson/automata/concrete/transpose_view.hxx		     \
	vaucanson/config/math.hh				     \
	vaucanson/config/pconf.hh				     \
	vaucanson/config/system.hh				     \
	vaucanson/design_pattern/default_ops.hh			     \
	vaucanson/design_pattern/default_ops.hxx			     \
	vaucanson/design_pattern/element.hh			     \
	vaucanson/design_pattern/element.hxx			     \
	vaucanson/design_pattern/element_ops.hh			     \
	vaucanson/design_pattern/element_ops.hxx			     \
	vaucanson/design_pattern/element_op_traits.hh		     \
	vaucanson/design_pattern/design_pattern.hh			     \
	vaucanson/design_pattern/meta_element_root.hh		     \
	vaucanson/design_pattern/meta_element_root.hxx		     \
	vaucanson/design_pattern/predecls.hh			     \
	vaucanson/design_pattern/slots.hh				     \
	vaucanson/design_pattern/slots.hxx				     \
	vaucanson/design_pattern/structure.hh			     \
	vaucanson/design_pattern/structure.hxx			     \
	vaucanson/design_pattern/syntactic_decorator.hh		     \
	vaucanson/design_pattern/syntactic_decorator.hxx		     \
	vaucanson/misc/bitset.hh				     \
	vaucanson/misc/bitset.hxx				     \
	vaucanson/misc/char_traits.hh				     \
	vaucanson/misc/char_traits.hxx				     \
	vaucanson/misc/deferrer.hh				     \
	vaucanson/misc/deferrer.hxx				     \
	vaucanson/misc/special_char_traits.hh			     \
	vaucanson/misc/constraints.hh				     \
	vaucanson/misc/container_ops.hh				     \
	vaucanson/misc/container_ops.hxx			     \
	vaucanson/misc/contract.hh				     \
	vaucanson/misc/fsm_dump.hh				     \
	vaucanson/misc/fsm_dump.hxx				     \
	vaucanson/misc/limits.hh				     \
	vaucanson/misc/random.hh				     \
	vaucanson/misc/random.hxx				     \
	vaucanson/misc/selectors.hh				     \
	vaucanson/misc/static.hh				     \
	vaucanson/misc/support.hh				     \
	vaucanson/misc/support.hxx				     \
	vaucanson/misc/unique.hh				     \
	vaucanson/misc/unique.hcc				     \
	vaucanson/misc/unique.hxx				     \
	vaucanson/misc/utility.hh				     \
	vaucanson/misc/window.hh				     \
	vaucanson/misc/window.hxx				     \
	vaucanson/tools/automaton_tools.hh			     \
	vaucanson/tools/gen_book.hh				     \
	vaucanson/tools/gen_book.hxx				     \
	vaucanson/tools/gen_random.hh				     \
	vaucanson/tools/gen_random.hxx				     \
	vaucanson/tools/usual.hh				     \
	vaucanson/tools/usual.hxx				     \
	vaucanson/tools/usual_escaped_characters.hh		     \
	vaucanson/tools/usual_escaped_characters.hxx		     \
	vaucanson/tools/usual_macros.hh				     \
	vaucanson/tools/dot_dump.hh				     \
	vaucanson/tools/dot_dump.hxx				     \
	vaucanson/tools/io.hh			\
	vaucanson/tools/io.hxx			\
	vaucanson/tools/usual_io.hh		\
	vaucanson/tools/usual_io.hxx		\
	vaucanson/tools/dot_format.hh		\
	vaucanson/tools/dot_format.hxx		\
	vaucanson/tools/simple_format.hh	\
	vaucanson/tools/simple_format.hxx

