## Vaucanson, a generic library for finite state machines.
## Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006 The Vaucanson Group.
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## The complete GNU General Public Licence Notice can be found as the
## `COPYING' file in the root directory.
##
## The Vaucanson Group consists of people listed in the `AUTHORS' file.

nobase_include_HEADERS =			\
vaucanson/config/system.hh			\
vaucanson/config/math.hh			\
vaucanson/config/pconf.hh

nobase_include_HEADERS +=			\
vaucanson/contexts/automaton.thh		\
vaucanson/contexts/boolean_semiring.thh		\
vaucanson/contexts/ratseries_semiring.thh	\
vaucanson/contexts/r_semiring.thh		\
vaucanson/contexts/z_semiring.thh		\
vaucanson/contexts/z_max_plus_semiring.thh	\
vaucanson/contexts/z_min_plus_semiring.thh	\
vaucanson/contexts/char_letter.thh		\
vaucanson/contexts/dynamic_alphabet.thh		\
vaucanson/contexts/free_monoid.thh		\
vaucanson/contexts/free_monoid_product.thh	\
vaucanson/contexts/generic_automaton_impl.thh	\
vaucanson/contexts/generic_series.thh		\
vaucanson/contexts/transducer.thh		\
vaucanson/contexts/polynom_series.thh

nobase_include_HEADERS +=			\
vaucanson/misc/container_ops.hxx		\
vaucanson/misc/container_ops.hh			\
vaucanson/misc/iomanip.hh			\
vaucanson/misc/iomanip.hxx			\
vaucanson/misc/escaper.hh			\
vaucanson/misc/escaper.hxx			\
vaucanson/misc/random.hh			\
vaucanson/misc/random.hxx			\
vaucanson/misc/limits.hh			\
vaucanson/misc/misc.hh				\
vaucanson/misc/support.hh			\
vaucanson/misc/support.hxx			\
vaucanson/misc/constraints.hh			\
vaucanson/misc/selectors.hh			\
vaucanson/misc/static.hh			\
vaucanson/misc/unique.hh			\
vaucanson/misc/unique.hxx			\
vaucanson/misc/usual_macros.hh			\
vaucanson/misc/usual_escaped_characters.hxx	\
vaucanson/misc/usual_escaped_characters.hh	\
vaucanson/misc/contract.hh			\
vaucanson/misc/window.hxx			\
vaucanson/misc/window.hh			\
vaucanson/misc/bitset.hxx			\
vaucanson/misc/bitset.hh			\
vaucanson/misc/char_traits.hxx			\
vaucanson/misc/char_traits.hh			\
vaucanson/misc/special_char_traits.hh		\
vaucanson/misc/deferrer.hxx			\
vaucanson/misc/deferrer.hh			\
vaucanson/misc/functors.hh			\
vaucanson/misc/functors.hxx

nobase_include_HEADERS +=			\
vaucanson/tools/bencher.hh			\
vaucanson/tools/bencher.hxx			\
vaucanson/tools/automaton_tools.hh		\
vaucanson/tools/gen_book.hh			\
vaucanson/tools/gen_book.hxx			\
vaucanson/tools/gen_random.hh			\
vaucanson/tools/gen_random.hxx			\
vaucanson/tools/dot_dump.hh			\
vaucanson/tools/dot_display.hh			\
vaucanson/tools/dot_format.hxx			\
vaucanson/tools/dot_format.hh			\
vaucanson/tools/dumper.hxx			\
vaucanson/tools/dumper.hh			\
vaucanson/tools/io.hxx				\
vaucanson/tools/io.hh				\
vaucanson/tools/simple_format.hxx		\
vaucanson/tools/simple_format.hh		\
vaucanson/tools/simple_dump.hxx			\
vaucanson/tools/simple_dump.hh			\
vaucanson/tools/usual_io.hxx			\
vaucanson/tools/usual_io.hh			\
vaucanson/tools/dot_dump.hxx			\
vaucanson/tools/dot_display.hxx			\
vaucanson/tools/fsm_dump.hh			\
vaucanson/tools/fsm_dump.hxx			\
vaucanson/tools/xml_dump.hh			\
vaucanson/tools/xml_dump.hxx			\
vaucanson/tools/xml_load.hh			\
vaucanson/tools/xml_load.hxx			\
vaucanson/tools/xml_display.hh			\
vaucanson/tools/xml_display.hxx			\
vaucanson/tools/out_display.hh			\
vaucanson/tools/out_display.hxx

nobase_include_HEADERS +=				\
vaucanson/design_pattern/default_ops.hh			\
vaucanson/design_pattern/default_ops.hxx		\
vaucanson/design_pattern/element.hh			\
vaucanson/design_pattern/element.hxx			\
vaucanson/design_pattern/meta_element_root.hh		\
vaucanson/design_pattern/meta_element_root.hxx		\
vaucanson/design_pattern/element_ops.hh			\
vaucanson/design_pattern/element_ops.hxx		\
vaucanson/design_pattern/design_pattern.hh		\
vaucanson/design_pattern/syntactic_decorator.hh		\
vaucanson/design_pattern/syntactic_decorator.hxx	\
vaucanson/design_pattern/element_op_traits.hh		\
vaucanson/design_pattern/predecls.hh			\
vaucanson/design_pattern/slots.hh			\
vaucanson/design_pattern/slots.hxx			\
vaucanson/design_pattern/structure.hh			\
vaucanson/design_pattern/structure.hxx			\
vaucanson/design_pattern/factory.hh

nobase_include_HEADERS +=				\
vaucanson/algebra/concept/alphabets_base.hh		\
vaucanson/algebra/concept/alphabets_base.hxx		\
vaucanson/algebra/concept/freemonoid_base.hh		\
vaucanson/algebra/concept/freemonoid_base.hxx		\
vaucanson/algebra/concept/freemonoid_product_base.hh	\
vaucanson/algebra/concept/freemonoid_product_base.hxx	\
vaucanson/algebra/concept/freemonoid_product.hh		\
vaucanson/algebra/concept/freemonoid_product.hxx	\
vaucanson/algebra/concept/letter.hh			\
vaucanson/algebra/concept/monoid_base.hh		\
vaucanson/algebra/concept/monoid_base.hxx		\
vaucanson/algebra/concept/numerical_semiring.hh		\
vaucanson/algebra/concept/numerical_semiring.hxx	\
vaucanson/algebra/concept/semigroup_base.hh		\
vaucanson/algebra/concept/semigroup_base.hxx		\
vaucanson/algebra/concept/semiring_base.hh		\
vaucanson/algebra/concept/semiring_base.hxx		\
vaucanson/algebra/concept/series_base.hh		\
vaucanson/algebra/concept/series_base.hxx		\
vaucanson/algebra/concept/tropical_semiring.hh		\
vaucanson/algebra/concept/tropical_semiring.hxx

nobase_include_HEADERS +=							     \
vaucanson/algebra/implementation/letter/couple_letter.hxx			     \
vaucanson/algebra/implementation/letter/couple_letter.hh			     \
vaucanson/algebra/implementation/letter/char_letter.hh				     \
vaucanson/algebra/implementation/letter/range.hh				     \
vaucanson/algebra/implementation/letter/range.hxx				     \
vaucanson/algebra/implementation/letter/int_letter.hxx				     \
vaucanson/algebra/implementation/letter/int_letter.hh				     \
vaucanson/algebra/implementation/alphabets/alphabets.hh				     \
vaucanson/algebra/implementation/alphabets/decorated_alphabet.hh		     \
vaucanson/algebra/implementation/alphabets/decorated_alphabet.hxx		     \
vaucanson/algebra/implementation/alphabets/predefs.hh				     \
vaucanson/algebra/implementation/alphabets/set_alphabet.hh			     \
vaucanson/algebra/implementation/alphabets/set_alphabet.hxx			     \
vaucanson/algebra/implementation/free_monoid/predefs.hh				     \
vaucanson/algebra/implementation/free_monoid/str_words.hh			     \
vaucanson/algebra/implementation/free_monoid/str_words.hxx			     \
vaucanson/algebra/implementation/free_monoid/words.hh				     \
vaucanson/algebra/implementation/free_monoid/words.hxx				     \
vaucanson/algebra/implementation/free_monoid/tools.hh				     \
vaucanson/algebra/implementation/free_monoid/tools.hxx				     \
vaucanson/algebra/implementation/free_monoid_product/freemonoid_product_pair_str.hh  \
vaucanson/algebra/implementation/free_monoid_product/freemonoid_product_pair_str.hxx \
vaucanson/algebra/implementation/semiring/numerical_semiring.hh			     \
vaucanson/algebra/implementation/semiring/numerical_semiring.hxx		     \
vaucanson/algebra/implementation/semiring/tropical_semiring.hh			     \
vaucanson/algebra/implementation/semiring/tropical_semiring.hxx			     \
vaucanson/algebra/implementation/semiring/rational_number.hxx			     \
vaucanson/algebra/implementation/semiring/rational_number.hh			     \
vaucanson/algebra/implementation/series/rat/depth_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/depth_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/dispatch_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/dispatch_visitor.hxx		     \
vaucanson/algebra/implementation/series/rat/dump_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/dump_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/star_height_visitor.hh		     \
vaucanson/algebra/implementation/series/rat/star_height_visitor.hxx		     \
vaucanson/algebra/implementation/series/rat/length_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/length_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/exp.hh				     \
vaucanson/algebra/implementation/series/rat/exp.hxx				     \
vaucanson/algebra/implementation/series/rat/nodes.hh				     \
vaucanson/algebra/implementation/series/rat/nodes.hxx				     \
vaucanson/algebra/implementation/series/rat/random_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/random_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/reverse_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/reverse_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/xml_exp_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/xml_exp_visitor.hxx			     \
vaucanson/algebra/implementation/series/generalized.hh				     \
vaucanson/algebra/implementation/series/generalized.hxx				     \
vaucanson/algebra/implementation/series/krat.hh					     \
vaucanson/algebra/implementation/series/krat.hxx				     \
vaucanson/algebra/implementation/series/krat_conversion.hh			     \
vaucanson/algebra/implementation/series/krat_conversion.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_parser.hh			     \
vaucanson/algebra/implementation/series/krat_exp_parser.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_pattern.hh			     \
vaucanson/algebra/implementation/series/krat_exp_pattern.hxx			     \
vaucanson/algebra/implementation/series/krat_coefficient.hxx			     \
vaucanson/algebra/implementation/series/krat_coefficient.hh			     \
vaucanson/algebra/implementation/series/krat_exp_support.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_is_finite_app.hxx		     \
vaucanson/algebra/implementation/series/polynoms.hh				     \
vaucanson/algebra/implementation/series/polynoms.hxx				     \
vaucanson/algebra/implementation/series/series.hh				     \
vaucanson/algebra/implementation/series/series.hxx				     \
vaucanson/algebra/implementation/series/transpose.hh				     \
vaucanson/algebra/implementation/series/transpose.hxx				     \
vaucanson/algebra/implementation/series/krat_exp_transpose.hxx			     \
vaucanson/algebra/implementation/predefs.hh

nobase_include_HEADERS +=			\
vaucanson/algebra/algebra.hh

nobase_include_HEADERS +=					\
vaucanson/algorithms/accessible.hh				\
vaucanson/algorithms/accessible.hxx				\
vaucanson/algorithms/aci_canonical.hh				\
vaucanson/algorithms/aci_canonical.hxx				\
vaucanson/algorithms/aut_to_exp.hh				\
vaucanson/algorithms/aut_to_exp.hxx				\
vaucanson/algorithms/backward_realtime.hh			\
vaucanson/algorithms/backward_realtime.hxx			\
vaucanson/algorithms/berry_sethi.hh				\
vaucanson/algorithms/berry_sethi.hxx				\
vaucanson/algorithms/brzozowski.hh				\
vaucanson/algorithms/brzozowski.hxx				\
vaucanson/algorithms/complement.hh				\
vaucanson/algorithms/complement.hxx				\
vaucanson/algorithms/complete.hh				\
vaucanson/algorithms/complete.hxx				\
vaucanson/algorithms/concatenate.hh				\
vaucanson/algorithms/concatenate.hxx				\
vaucanson/algorithms/composition_cover.hh			\
vaucanson/algorithms/composition_cover.hxx			\
vaucanson/algorithms/cut_up.hh					\
vaucanson/algorithms/cut_up.hxx					\
vaucanson/algorithms/derived_term_automaton.hh			\
vaucanson/algorithms/derived_term_automaton.hxx			\
vaucanson/algorithms/determinize.hh				\
vaucanson/algorithms/determinize.hxx				\
vaucanson/algorithms/eps_removal.hh				\
vaucanson/algorithms/eps_removal.hxx				\
vaucanson/algorithms/eval.hh					\
vaucanson/algorithms/eval.hxx					\
vaucanson/algorithms/evaluation.hh				\
vaucanson/algorithms/evaluation.hxx				\
vaucanson/algorithms/evaluation_fmp.hh				\
vaucanson/algorithms/evaluation_fmp.hxx				\
vaucanson/algorithms/extension.hh				\
vaucanson/algorithms/extension.hxx				\
vaucanson/algorithms/finite_support_conversion.hh		\
vaucanson/algorithms/finite_support_conversion.hxx		\
vaucanson/algorithms/fmp_to_realtime.hh				\
vaucanson/algorithms/fmp_to_realtime.hxx			\
vaucanson/algorithms/forward_realtime.hh			\
vaucanson/algorithms/forward_realtime.hxx			\
vaucanson/algorithms/initial_derivation.hh			\
vaucanson/algorithms/initial_derivation.hxx			\
vaucanson/algorithms/internal/build_pattern.hh			\
vaucanson/algorithms/internal/build_pattern.hxx			\
vaucanson/algorithms/internal/has_neighbour.hh			\
vaucanson/algorithms/internal/has_neighbour.hxx			\
vaucanson/algorithms/internal/outsplitting.hh			\
vaucanson/algorithms/internal/outsplitting.hxx			\
vaucanson/algorithms/internal/partial_rat_exp.hh		\
vaucanson/algorithms/internal/partial_rat_exp.hxx		\
vaucanson/algorithms/internal/partial_rat_exp_constant_term.hh	\
vaucanson/algorithms/internal/partial_rat_exp_constant_term.hxx	\
vaucanson/algorithms/internal/partial_rat_exp_derivation.hh	\
vaucanson/algorithms/internal/partial_rat_exp_derivation.hxx	\
vaucanson/algorithms/internal/skeleton.hh			\
vaucanson/algorithms/internal/skeleton.hxx			\
vaucanson/algorithms/invert.hh					\
vaucanson/algorithms/invert.hxx					\
vaucanson/algorithms/is_ambiguous.hh				\
vaucanson/algorithms/is_ambiguous.hxx				\
vaucanson/algorithms/is_letterized.hh				\
vaucanson/algorithms/is_letterized.hxx				\
vaucanson/algorithms/is_normalized.hh				\
vaucanson/algorithms/is_normalized.hxx				\
vaucanson/algorithms/is_realtime.hh				\
vaucanson/algorithms/is_realtime.hxx				\
vaucanson/algorithms/isomorph.hh				\
vaucanson/algorithms/isomorph.hxx				\
vaucanson/algorithms/krat_exp_cderivation.hh			\
vaucanson/algorithms/krat_exp_cderivation.hxx			\
vaucanson/algorithms/krat_exp_constant_term.hh			\
vaucanson/algorithms/krat_exp_constant_term.hxx			\
vaucanson/algorithms/krat_exp_derivation.hh			\
vaucanson/algorithms/krat_exp_derivation.hxx			\
vaucanson/algorithms/krat_exp_expand.hh				\
vaucanson/algorithms/krat_exp_expand.hxx			\
vaucanson/algorithms/krat_exp_flatten.hh			\
vaucanson/algorithms/krat_exp_flatten.hxx			\
vaucanson/algorithms/krat_exp_linearize.hh			\
vaucanson/algorithms/krat_exp_linearize.hxx			\
vaucanson/algorithms/krat_exp_partial_derivation.hh		\
vaucanson/algorithms/krat_exp_partial_derivation.hxx		\
vaucanson/algorithms/krat_exp_realtime.hh			\
vaucanson/algorithms/krat_exp_realtime.hxx			\
vaucanson/algorithms/letter_to_letter_composition.hh		\
vaucanson/algorithms/letter_to_letter_composition.hxx		\
vaucanson/algorithms/minimization_hopcroft.hh			\
vaucanson/algorithms/minimization_hopcroft.hxx			\
vaucanson/algorithms/minimization_moore.hh			\
vaucanson/algorithms/minimization_moore.hxx			\
vaucanson/algorithms/normalized.hh				\
vaucanson/algorithms/normalized.hxx				\
vaucanson/algorithms/normalized_composition.hh			\
vaucanson/algorithms/normalized_composition.hxx			\
vaucanson/algorithms/product.hh					\
vaucanson/algorithms/product.hxx				\
vaucanson/algorithms/projection.hh				\
vaucanson/algorithms/projection.hxx				\
vaucanson/algorithms/projections_fmp.hh				\
vaucanson/algorithms/projections_fmp.hxx			\
vaucanson/algorithms/realtime.hh				\
vaucanson/algorithms/realtime.hxx				\
vaucanson/algorithms/realtime_composition.hh			\
vaucanson/algorithms/realtime_composition.hxx			\
vaucanson/algorithms/realtime_decl.hh				\
vaucanson/algorithms/realtime_decl.hxx				\
vaucanson/algorithms/realtime_to_fmp.hh				\
vaucanson/algorithms/realtime_to_fmp.hxx			\
vaucanson/algorithms/search.hh					\
vaucanson/algorithms/search.hxx					\
vaucanson/algorithms/standard.hh				\
vaucanson/algorithms/standard.hxx				\
vaucanson/algorithms/standard_of.hh				\
vaucanson/algorithms/standard_of.hxx				\
vaucanson/algorithms/sub_automaton.hh				\
vaucanson/algorithms/sub_automaton.hxx				\
vaucanson/algorithms/sub_normalize.hh				\
vaucanson/algorithms/sub_normalize.hxx				\
vaucanson/algorithms/sum.hh					\
vaucanson/algorithms/sum.hxx					\
vaucanson/algorithms/thompson.hh				\
vaucanson/algorithms/thompson.hxx				\
vaucanson/algorithms/transpose.hh				\
vaucanson/algorithms/transpose.hxx				\
vaucanson/algorithms/trim.hh					\
vaucanson/algorithms/trim.hxx

nobase_include_HEADERS +=					\
vaucanson/automata/concept/automata.hh				\
vaucanson/automata/concept/automata.hxx				\
vaucanson/automata/concept/automata_base.hh			\
vaucanson/automata/concept/automata_base.hxx			\
vaucanson/automata/concept/automata_kind.hh			\
vaucanson/automata/concept/automata_ops.hh			\
vaucanson/automata/concept/automata_ops.hxx			\
vaucanson/automata/concept/copy.hh				\
vaucanson/automata/concept/copy.hxx				\
vaucanson/automata/concept/delta_kind.hh			\
vaucanson/automata/concept/handlers.hh				\
vaucanson/automata/concept/handlers.hxx				\
vaucanson/automata/concept/history.hh				\
vaucanson/automata/concept/history.hxx				\
vaucanson/automata/concept/kinds.hh				\
vaucanson/automata/concept/kinds.hxx				\
vaucanson/automata/concept/tags.hh				\
vaucanson/automata/concept/tags.hxx				\
vaucanson/automata/concept/transducer.hh			\
vaucanson/automata/concept/transducer.hxx			\
vaucanson/automata/concept/transducer_base.hh			\
vaucanson/automata/concept/transducer_base.hxx			\
vaucanson/automata/concept/transducer_ops.hh			\
vaucanson/automata/concept/transducer_ops.hxx			\
vaucanson/automata/concept/translate.hh				\
vaucanson/automata/concept/translate.hxx			\
vaucanson/automata/implementation/automaton_view.hh		\
vaucanson/automata/implementation/automaton_view.hxx		\
vaucanson/automata/implementation/generalized.hh		\
vaucanson/automata/implementation/generalized.hxx		\
vaucanson/automata/implementation/geometry.hh			\
vaucanson/automata/implementation/geometry.hxx			\
vaucanson/automata/implementation/graph.hh			\
vaucanson/automata/implementation/graph.hxx			\
vaucanson/automata/implementation/kind_adapter.hh		\
vaucanson/automata/implementation/kind_adapter.hxx		\
vaucanson/automata/implementation/transpose_view.hh		\
vaucanson/automata/implementation/transpose_view.hxx

nobase_include_HEADERS +=				\
vaucanson/vaucanson.hh					\
vaucanson/boolean_automaton.hh				\
vaucanson/boolean_transducer.hh				\
vaucanson/z_transducer.hh				\
vaucanson/fmp_transducer.hh				\
vaucanson/z_fmp_transducer.hh				\
vaucanson/contexts/automaton_functions.thh		\
vaucanson/contexts/automaton_functions.thxx		\
vaucanson/contexts/transducer_functions.thh		\
vaucanson/contexts/transducer_functions.thxx		\
vaucanson/contexts/fmp_transducer_functions.thh		\
vaucanson/contexts/fmp_transducer_functions.thxx	\
vaucanson/z_max_plus_automaton.hh			\
vaucanson/z_min_plus_automaton.hh			\
vaucanson/z_automaton.hh				\
vaucanson/r_automaton.hh				\
vaucanson/standard_algorithms.hh

nobase_include_HEADERS += $(XMLSOURCES)


XMLSOURCES =						\
	vaucanson/xml/error_handler.hh			\
	vaucanson/xml/error_handler.hxx			\
	vaucanson/xml/ios.hh				\
	vaucanson/xml/ios.hxx				\
	vaucanson/xml/strings.hh			\
	vaucanson/xml/strings.hxx			\
	vaucanson/xml/XML.hh				\
	vaucanson/xml/XML.hxx				\
	vaucanson/xml/node.hh				\
	vaucanson/xml/node.hxx				\
	vaucanson/xml/session.hh			\
	vaucanson/xml/session.hxx			\
	vaucanson/xml/tools.hh				\
	vaucanson/xml/tools.hxx				\
	vaucanson/xml/xerces_parser.hh			\
	vaucanson/xml/xerces_parser.hxx			\
	vaucanson/xml/xml_chooser.hh			\
	vaucanson/xml/xml_chooser.hxx			\
	vaucanson/xml/xml_converter.hh			\
	vaucanson/xml/xml_converter.hxx
